code/force-app/main/default/objects/Precall__c/Precall__c.object-meta.xml
<CustomObject>
    <label>客戶拜訪與協訪表</label>
    <nameField>
        <displayFormat>PC-{YYYY}{MM}-{0000000}</displayFormat>
        <label>客戶拜訪與協訪表 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>