code/force-app/main/default/objects/Precall__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客戶名稱</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>客戶拜訪與協訪表</relationshipLabel>
    <relationshipName>Precall</relationshipName>
    <type>Lookup</type>
</CustomField>