code/force-app/main/default/objects/Precall__c/fields/Account_Name_Primary_Language__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Primary_Language__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>客戶名稱 (主要語言)</label>
    <type>Text</type>
</CustomField>