code/force-app/main/default/objects/Precall__c/fields/Aerial_Map_Target_Customer__c.field-meta.xml
<CustomField>
    <fullName>Aerial_Map_Target_Customer__c</fullName>
    <label>Aerial Map Target Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>