code/force-app/main/default/objects/Precall__c/fields/Contact_Level__c.field-meta.xml
<CustomField>
    <fullName>Contact_Level__c</fullName>
    <label>接觸層級</label>
    <length>50</length>
    <type>Text</type>
</CustomField>