code/force-app/main/default/objects/Precall__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>IF( Account__r.IsPersonAccount = true,  text(Account__r.Permanent_Address__CountryCode__s)  , Text(Account__r.Registered_Address__CountryCode__s) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>國家別</label>
    <type>Text</type>
</CustomField>