code/force-app/main/default/objects/Precall__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>Text( Account__r.Industry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>行業別</label>
    <type>Text</type>
</CustomField>