code/force-app/main/default/objects/Precall__c/fields/Other_Overseas_Locations__c.field-meta.xml
<CustomField>
    <fullName>Other_Overseas_Locations__c</fullName>
    <label>其他海外據點</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>是</fullName>
            </value>
            <value>
                <fullName>否</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>