code/force-app/main/default/objects/Precall__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>狀態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>尚未拜訪</fullName>
            </value>
            <value>
                <fullName>已確認拜訪日期</fullName>
            </value>
            <value>
                <fullName>已拜訪</fullName>
            </value>
            <value>
                <fullName>已完成拜訪紀錄</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>